--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   cloud_firestore: ^4.0.2
   firebase_auth: ^4.0.2
+  group_radio_button: ^1.2.0
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
