--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   firebase_auth: ^4.0.2
   group_radio_button: ^1.2.0
   http: ^0.13.5
+  flutter_launcher_icons: ^0.11.0
+  encrypt: ^5.0.1
+  crypto: ^3.0.2
 
 dev_dependencies:
   flutter_test:
@@ -49,6 +52,10 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+
+flutter_icons:
+  image_path: "asserts/icons/BlLogo22.png"
+  android: ture
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -64,6 +71,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - asserts/images/profile-picture.jpeg
+    - asserts/icons/BlLogo22.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
