--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   flutter_launcher_icons: ^0.11.0
   encrypt: ^5.0.1
   crypto: ^3.0.2
+  fluttertoast: ^8.1.1
+  get_storage: ^2.0.3
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_test:
